# Leodroid

./: .gitignore  README.md  compile.sh  copy.sh  env.opts  setup.sh  systemd.sh  ubuntu.setup.sh  yocto.setup.sh
ApiDroidImplementation/: compile.sh
ApplicationManagingService/: compile.sh  complile.sh  setup.sh  systemd.sh
ApplicationManagingService/src/: Command.java  CommandExecutionResult.java  ManagingService.java  VoiceMessage.java
DataStorageService/: DataService.js  ErrorHandler.js  Errors.js  Logger.js  compile.sh  package.json  setup.sh  systemd.sh
DataStorageService/base/: BaseRepository.js
DataStorageService/common/: CommonServiceController.js  CommonServiceRepository.js
MaintenanceService/: compile.sh  package.json  systemd.sh
MessageBusImpl/: MessageBus.java  MessageBusFactory.java  TextSynthesisBus.java  compile.sh
MonitoringService/: OnFailureScript.sh  OnStopScript.sh  systemd.sh
MovingService/: compile.sh  systemd.sh
RecognitionService/: systemd.sh
SpeechRecognitionService/: compile.sh  complile.sh  setup.sh  systemd.sh
SpeechSynthesisService/: CMakeLists.txt  SynthesisService.cpp  compile.sh  espeak.h  main.cpp  package.json  setup.sh  systemd.sh
SpeechSynthesisService/src/: CommandExecutor.js  EspeakWrapper.js  Logger.cpp  Logger.h  MessageBus.cpp  MessageBus.h  SpeechSynthesizer.cpp  SpeechSynthesizer.h  SynthesisService.js  TcpHandler.cpp  TcpHandler.h  VincentPoem.json
SynthesisService/: compile.sh  package.json  systemd.sh
WeatherService/: compile.sh  config.json
scripts/: ubuntu.rabbit.setup.sh  yocto.rabbit.setup.sh
(+95 files in other folders)
